--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,11 @@
             <version>8.5.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
+        </dependency>
+
         <!--       Flyway naplózás: FEKETE színben (logback.xml-t ne feledd a resources-be  -->
         <dependency>
             <groupId>ch.qos.logback</groupId>
